setnewwinprops (0.26) unstable; urgency=medium

  * for each Rule the conditions "select" and "deselect" will be executed
    in order of appearance

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Mon, 10 Oct 2022 04:55:54 +0200

setnewwinprops (0.25) unstable; urgency=medium

  * The keywords "check" and "uncheck" have been renamed to "select" and "deselect"
  * The package toggle-decorations is now a dependency to install this tool.
  * take account of window decorations
    to acurately positioning the window vertically centered,
    also when positioning the window to bottom.
  * temporary values will be stored in a single file.
    - desktop or window properties
    - tiles
    - mosaics
  * developing new actions:
    - set_mosaicked

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Wed, 05 Oct 2022 12:14:20 +0200

setnewwinprops (0.24) unstable; urgency=medium

  * parse better the config file, parser accepts:
    - set[_ ]property
    - set[_ ]property[= ]["']*value["']*
    - unset[_ ]property
    - check[_ ]property
    - check[_ ]property[= ]["']*value["']*
    - uncheck[_ ]property
  * Right controlling decorate/undecorate windows
    when using version 1.2 of toggle-decorations.
  * undecorate and redecorate windows to:
    - set accurate position in bottom 
    - tile windows
  * rename properties:
    - maximized_horizontally has been renamed to maximized_horz
    - maximized_vertically has been renamed to maximized_vert

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Mon, 03 Oct 2022 13:44:07 +0200

setnewwinprops (0.23) unstable; urgency=medium

  * Now setnewwinprops uses the C program toggle-decorations.c to set or unset
    window decorations. This C program was done by muktupavels.
    However, toggle-decorations is not part of this package because it's build for
    all architectures.
    setnewwinprops may use an alternative method to set or unset
    window decorations tappping keys in the window menu. 